--- a/1번 문제.md
+++ b/1번 문제.md
@@ -1,1 +1,17 @@
+# Q : (1) 동시에 같은 DB Table row 를 업데이트 하는 상황을 방어하기 위해 어떻게 개발하실 건지 설명해주세요.
+---
 
+### 방법 1) LOCK 사용
+lock 은 데이터를 수정하는 동안 접근하지 못하도록 막아놓을 수 있는 기능 중 하나이다.
+lock에는 데이터베이스 락, 옵티미스틱 락 등이 있다.
+데이터베이스 락은 데이터베이스에서 제공해주는 락으로 트랜잭션이 끝날 때 까지 락을 하는 방식이다. 
+옵티미스틱 락은 데이터에 버전 정보 or 타임스탬프 등을 넣어 비교하면서 락을 하는 방식이다.
+또는, 데이터베이스 레벨에서의 락을 쓰지 않고 자체 구현하여 쓰는 방식또한 가능하다.
+
+### 방법 2) 트랜잭션 사용
+원하는 프로세스를 트랜잭션으로 묶어 작업을 수행할 수도 있다.
+작업이 모두 성공한다면 커밋되고, 그렇지 않다면 롤백하거나 재시도 하는 것도 가능하다.
+
+### 방법 3) 셰마포어, 뮤텍스 사용
+셰마포어, 뮤텍스 모두 공유도니 리소스를 조절하여 쓰는 기법 중 하나이다.
+여러 프로그래밍 언어로 이 둘을 구현하여 사용할 수 있다.
