--- a/2번 문제.md
+++ b/2번 문제.md
@@ -1,1 +1,19 @@
+# Q : (2) TCP 와 UDP 의 차이를 작성해주세요.
+
+### 차이점 1) 연결 지향성 / 비연결 지향성
+TCP : **연결 지향적**인 프로토콜이다. 3-way(connect), 4-way(disconnect) 방식으로 연결을 제어한다. 또한, 순서가 보장되어 있고, 손실된 패킷이 재전송되기 떄문에 **신뢰성 높은 통신이 가능**하다.
+
+UDP : **비연결 지향적**인 프로토콜이다. 연결 설정단계 없이 통신이 시작된다. 따라서, 순서가 보장되어 있지 않고, 패킷이 손상되거나 유실될 수 있다. 그럻기 때문에, 신뢰성은 낮지만 **속도는 빠르다.**
+
+
+### 차이점 2) 헤더 및 오버헤드
+TCP : 헤더에 여러 정보를 담고 있어, 오버헤드가 크다.
+
+UDP : 비교적 헤더가 간단하고, 오버헤드가 적다.
+
+
+### 차이점 3) 활용분야
+TCP : http, Email, file transfer
+
+UDP : 스트리밍, Broadcasting, DNS
 
