--- a/3번 문제.md
+++ b/3번 문제.md
@@ -1,1 +1,9 @@
+# Q : (3) 웹 브라우저에 네이버 를 검색하고 화면에 네이버 화면이 출력이 될 때 까지 내부적으로 어떤 동작들이 수행이 되는지 설명해주세요.
+(주소창에 "http://www.naver.com" 을 검색했을 때)
 
+1) URL의 호스트명을 추출하여 DNS 서버에 보낸다. (지금 같은 경우, www.naver.com 이 된다.)
+2) DNS 서버에서 해당 호스트명에 맞는 IP 주소를 반환해준다.
+3) 해당 IP주소로 TCP 연결을 한다. (3-way)
+4) 연결이 되면, 원하는 http 요청을 보낸다. (지금 같은 경우, 메인 페이지에 대한 정보를 요청한다.)
+5) 요청을 처리하고, 적합한 응답을 html, css 등 리소스와 함께 응답해준다.
+6) http 응답이 제대로 왔다면, 화면에 알맞게 랜더링해준 후, TCP 연결을 종료한다. (4-way)
