--- a/4번 문제.md
+++ b/4번 문제.md
@@ -1,1 +1,10 @@
+# Q : (4) 본인이 주력으로 사용하는 언어에서 설계적 결함 한 가지를 작성해주세요.
+(kotlin 을 기준으로 썼지만, java의 경우에도 해당됩니다.)
 
+java/kotlin 에는 프로그램이 실행 중에 할당된 메모리를 자동으로 관리해주는 "가비지 컬렉션(Garbage Collection)"이 존재한다.
+따라서, 개발자의 입장에서는 메모리 누수 등 여러문제를 관리해주지 않아도 된기 때문에 이는 큰 강점 중 하나이다.
+
+가비지 컬렉션이 처음에 heap 영역의 메모리를 검사하고 정리하는 과정이 있는데, 이 과정이 "블로킹" 방식으로 진행된다.
+즉, 이 과정동안 잠시 프로그램이 멈춰있다는 것(Stop-the-World)이다. 
+이는, 대규모 프로그램에서는 큰 성능저하를 일으킬 수 있는 민감한 문제이다.
+큰 문제가 없다면 괜찮지만, 만약 성능저하가 걱정된다면 다른 종류의 가비지 컬렉션도 사용가능하다. (ex_ G1(Garbage-First), CMS(Concurrent Mark-Sweep))
