--- a/5번 문제.md
+++ b/5번 문제.md
@@ -1,1 +1,12 @@
+# Q : (5) 본인이 주력으로 사용하는 언어에서 자료구조와 관련 된 클래스가 내부적으로 어떻게 동작하는지 한 가지 사례를 정하여 작성해주세요. ex) ArrayList, HashMap 등등
+(kotlin/java 의 HashMap 을 기준으로 작성되었습니다.)
 
+"HashMap" 은 데이터를 key-value 형태로 저장하는 자료구조 중 하나이다.
+여기서 key는 해시함수를 통해 변환하여, 이를 인덱스로 사용하는 배열에 저장한다.
+따라서, 훨씬 빠르게 데이터를 찾을 수 있다.
+인테스로 사용되는 배열의 크기는 초기에 정의되며, 각 인덱스에는 해시 코드에 해당하는 버킷(bucket)이 있다.
+즉, key는 인덱스 배열에, value는 해당 버킷에 저장되는 것이다.
+크기는 동적으로 늘릴 수 있지만, 무리하게 키울 경우 성능 저하 및 "해시 충돌"이 발생될 수 있다.
+"해시 충돌"이란 다른 키가 같은 해시값을 가지는 경우에 발생할 수 있는데, 이는 "체이닝" 또는 "개방 주소법"으로 해결할 수 있다.
+* 체이닝: 여러 개의 키-값 쌍을 동일한 버킷에 연결 리스트로 저장한다. 해시 충돌이 발생하면 연결 리스트에 노드를 추가하여 중복된 해시 코드를 처리한다.
+* 개방 주소법: 해시 충돌이 발생하면 다른 비어있는 버킷을 찾아서 키-값 쌍을 저장한다. 선형 탐사(Linear Probing) 및 이차 제곱 탐사(Quadratic Probing)와 같은 방법들이 사용된다.
